# ftx-bot

./: .gitignore  README.rst  dockerfile  pyproject.toml
bots/heikinAshiChaser/: dockerfile  pyproject.toml  run_bot.sh
bots/heikinAshiChaser/src/heikinashichaser/: bot.py  dbmanager.py  main.py  orderManager.py  strategy.py
bots/heikinAshiChaser/src/heikinashichaser/parameters/: heikinAshiObserver.yaml
bots/heikinAshiChaser/tests/: test_heikinashichaser.py
framework/: create_wheel.sh  dockerfile  pyproject.toml
framework/parameters/: default.yaml
framework/src/tradingbot/: dbManager.py  main.py  metrics.py  notifier.py  order.py  plotter.py  wallet.py
framework/tests/: test_tradingbot.py
parameters/: default.yaml  heikinAshiObserver.yaml
src/ftx_bot/: dashboard.py  exchange.py  main.py  order.py  utils.py  wallet.py
src/ftx_bot/clients/: ftx_client.py
src/tradingbot/: exchange.py  main.py  metrics.py  notifier.py  order.py  plotter.py  utils.py  wallet.py
src/tradingbot/bots/: heikinAshiObserver.py
src/tradingbot/clients/: ftx_client.py
tests/: test_ftx_bot.py
